@@ -18,7 +18,7 @@
 ?>
 	<!-- Warning Messages -->
 	<h4><?php echo $strNote; ?></h4>
-	<p><?php echo $strIndex; ?></p>
+	<p><?php if($mailto) echo str_replace("$1", "mail.php?subject".$title, $strIndex); else echo str_replace("$1", "mailto:".$email."?subject=".$title, $strIndex); ?></p>
 
 	<!-- Form proper -->
 	<form method="post" action="passthru.php?func=login">
