@@ -1,3 +1,4 @@
+	mailto form added
 	html headers standardized
 	Random image added to index page
 	Email alerts added for changes
